--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "原始碼/前端/react-demo"]
 	path = 原始碼/前端/react-demo
 	url = https://kamesan634@github.com/kamesan634/react-demo.git
+[submodule "原始碼/後端/dotnetapi-demo"]
+	path = 原始碼/後端/dotnetapi-demo
+	url = https://kamesan634@github.com/kamesan634/dotnetapi-demo.git
