--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "原始碼/後端/laravelapi-demo"]
 	path = 原始碼/後端/laravelapi-demo
 	url = https://kamesan634@github.com/kamesan634/laravelapi-demo.git
+[submodule "原始碼/後端/springbootapi-demo"]
+	path = 原始碼/後端/springbootapi-demo
+	url = https://kamesan634@github.com/kamesan634/springbootapi-demo.git
