新增 nextjs-demo submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "原始碼/後端/nestjs-demo"]
 	path = 原始碼/後端/nestjs-demo
 	url = https://kamesan634@github.com/kamesan634/nestjs-demo.git
+[submodule "原始碼/全端/nextjs-demo"]
+	path = 原始碼/全端/nextjs-demo
+	url = https://kamesan634@github.com/kamesan634/nextjs-demo.git
